--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "vue": "^2.5.2"
+    "vue": "^2.5.2",
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
